feat: update project